[project]
name = "beeclear"
version = "0.1.0"
description = ""
authors = [
    {name = "Kaith Menken",email = "moin@kaith.de"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer (>=0.15.1,<0.16.0)",
    "rich (>=13.9.4,<14.0.0)",
    "requests >=2.31.0"
]

[tool.poetry.scripts]
beeclear = "beeclear.cli:app"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
